# XMC_ROS2

./: .gitignore  README.md
install/: local_setup.sh  setup.sh
install/launch_node/lib/launch_node/: joy_to_steer
install/launch_node/share/launch_node/: package.dsv  package.ps1  package.sh  package.xml
install/launch_node/share/launch_node/config/: joy_teleop.yaml
install/launch_node/share/launch_node/launch/: bringup_launch.py
log/: latest_build
src/calib_recorder/: package.xml  setup.cfg  setup.py
src/calib_recorder/calib_recorder/: calib_recorder.py
src/install/: local_setup.sh  setup.sh
src/install/launch_node/lib/launch_node/: joy_publisher_dummy
src/install/launch_node/share/launch_node/: package.bash  package.dsv  package.sh  package.xml  package.zsh
src/launch_node/: setup.cfg  setup.py
src/launch_node/launch/: bringup_launch copy.py  bringup_launch.py
src/launch_node/launch_node/: joy_publisher_dummy.py  joy_to_steer.py
src/log/: latest_build
src/psoc6_motion_bridge/: README.md  setup.py
src/royale_ros2/: package.xml  setup.cfg  setup.py
src/royale_ros2/launch/: royale.launch.py
src/royale_ros2/royale_ros2/: royale_node.py
src/zukimo_car/zukimo_car/: CMakeLists.txt  package.xml
src/zukimo_car/zukimo_car/launch/: display.launch.py  joystick.launch.py  robot_state_publisher.launch.py
src/zukimo_car/zukimo_car/rviz/: view_config.rviz
src/zukimo_car/zukimo_car/urdf/: zukimo_car_full.xacro
tools/: README.md  calib_extrinsics.py  calib_intrinsics.py  calibration.py  pattern_gen.py  plot_grayscale.py
(+2 files in other folders)
