<?xml version="1.0"?>
<package format="3">
  <name>calib_recorder</name>
  <version>0.1.0</version>
  <description>RGB and ToF depth synchronized recorder for calibration datasets</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>message_filters</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>opencv</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
