<?xml version="1.0"?>
<package format="3">
  <name>zukimo_car</name>
  <version>0.0.1</version>
  <description>URDF/Xacro-based robot with joystick control and Gazebo/RViz support.</description>

  <maintainer email="user@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclpy</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>xacro</depend>
  <depend>sensor_msgs</depend>
  <depend>joy</depend>
  <depend>geometry_msgs</depend>
  <depend>controller_manager</depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo_plugins</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
